(fix) Picture frame aligns horizontally with the board above

--- a/app/assets/stylesheets/rate.sass.scss
+++ b/app/assets/stylesheets/rate.sass.scss
@@ -39,13 +39,15 @@
   }
 
   #place {
+    $container-width: 507px;
+
     margin: 0;
     padding: 0;
     background: url("pictureframe-bg.png") repeat-y;
     background-size: contain;
     width: 100%;
     position: relative;
-    width: 490px;
+    width: $container-width;
     z-index: 2;
     top: -5px;
 
